Migrate to XORM. Better support for PostgreSQL schemas.
